updated index page version 2, now with traps

--- a/Pitches.html
+++ b/Pitches.html
@@ -14,6 +14,10 @@
 
 		<p>Pitch 2: <strong>Baseball Nerves</strong> &mdash; Here I'd want to ask a simple question: Does the amount a baseball, basketball, or football player is talked and tweeted about effect how well they play their upcoming games? Does social media effect the nerves? I'm still thinking about where I'd pull social networking data, but <a href="http://www.infochimps.com">Infochimps</a> or <a href="https://scraperwiki.com/">ScraperWiki</a> seem like good jumping off points. I would grab data for the players at <a href="http://www.baseball-reference.com/">here</a>, <a href="http://www.pro-football-reference.com/">here</a>, or  <a href=" http://www.basketball-reference.com/">here</a>. I'd compare the twitter mentions for each player with some metric in their upcoming game: errors made, fumbles, or shots missed. Something like that.
 
-
+		<p>&nbsp;</p>
+		
+		<h4>If you're scared and lost and need to revert back to the index page, click <a href="http://1-ps.googleusercontent.com/x/www.dailydawdle.com/images.dailydawdle.com/monkey-washing-cat.gif.pagespeed.ce.XjmJQ-_gBM.gif">here</a>.</h4>
+		
+		<h4>Ok, ok. That last one was a trap. <em>Actually</em> click <a href="http://wherkewi.github.io/index.html">here</a>.
 	</body>
 </html>
