--- a/Pitches.html
+++ b/Pitches.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Pitches</title>
+		<title>Repitch</title>
 	</head>
 	<body>
 
@@ -10,9 +10,9 @@
 
 		<h2>William Herkewitz</h2>
 
-		<p>Pitch 1: <strong>Voting and Personal Climate Change</strong> &mdash; I'd like to collect data from both <a href="http://www.wunderground.com/">Wunderground</a> or <a href="http://www.weatherbase.com/">Weatherbase</a> and do some excel magic to figure out the average temperatures (and extreme temperature variability) for the hometowns of each senator/congressman over the last 10 years. I'd also pull voting records from <a href="http://www.data.gov">Data.gov</a>. Comparing the hometown weather data to each of the senator/congressman's voting record, I'd ask the question: Does hometown temperature change effect how senators/congressmen vote on climate change?</p>
-
-		<p>Pitch 2: <strong>Baseball Nerves</strong> &mdash; Here I'd want to ask a simple question: Does the amount a baseball, basketball, or football player is talked and tweeted about effect how well they play their upcoming games? Does social media effect the nerves? I'm still thinking about where I'd pull social networking data, but <a href="http://www.infochimps.com">Infochimps</a> or <a href="https://scraperwiki.com/">ScraperWiki</a> seem like good jumping off points. I would grab data for the players at <a href="http://www.baseball-reference.com/">here</a>, <a href="http://www.pro-football-reference.com/">here</a>, or  <a href=" http://www.basketball-reference.com/">here</a>. I'd compare the twitter mentions for each player with some metric in their upcoming game: errors made, fumbles, or shots missed. Something like that.
+		<p><em>Repitch!</em>: <strong>Personal Climate Change</strong> &mdash; I'd like to cull the monthly records for high and low temperatures from <a href="http://www.wunderground.com/">Wunderground</a> and for every city in the United States going back to 2000. I'd map this 'extreme weather' data, to see which states, counties, and cities have seen the most high and low temperature records across the country. I'd also like this project to provide the underlay to a question: Do hometown extreme temperature events effect opinion on climate change?
+		
+		</p>
 
 		<p>&nbsp;</p>
 			
