--- a/WeatherChoropleth/index.html
+++ b/WeatherChoropleth/index.html
@@ -24,6 +24,7 @@
 
 </style>
 <body>
+<p>Is this thing on???</p>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
