--- a/WeatherChoropleth/index.html
+++ b/WeatherChoropleth/index.html
@@ -46,7 +46,7 @@ var svg = d3.select("body").append("svg")
     .attr("height", height);
 
 queue()
-    .defer(d3.json, "/mbostock/raw/4090846/us.json")
+    .defer(d3.json, "us.json")
     .defer(d3.tsv, "unemployment.tsv", function(d) { rateById.set(d.id, +d.rate); })
     .await(ready);
 
