--- a/WeatherChoropleth/index.html
+++ b/WeatherChoropleth/index.html
@@ -36,7 +36,7 @@ var width = 960,
 var rateById = d3.map();
 
 var quantize = d3.scale.quantize()
-    .domain([0, .15])
+    .domain([1, 109])
     .range(d3.range(9).map(function(i) { return "q" + i + "-9"; }));
 
 var path = d3.geo.path();
