--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -152,6 +152,7 @@ clear: both;
 <p>First, there’s been a lot fewer record-breaking cold days than hot ones. Again, this doesn’t say anything definite about global warming, per se (although it does deal a pretty hard blow to the radical climate-science splinter group: the ‘global-cooling’ proponents). </p>
 <p>Second, the record cold temperature days seems spread across roughly the same areas as the record hot days. Again we see a lot of records over the Southwest, Northwest, and northern New England. And the south and Midwest seem relatively devoid of new cold temperature records. Does this mean all the temperature (hot <em>and</em> cold) variation is happening in the same places</p>
 <p>Or is something fishy going on?</p>
+<p><a href="wherkewi.github.io/FinalProject2/index.html">NEXT PAGE</a></p>
 
 
 
