--- a/FinalProject2/index.html
+++ b/FinalProject2/index.html
@@ -146,6 +146,7 @@ clear: both;
 <p>Ah ha! This is the root of my problem</p>
 <p>Imagine that Maricopa County, Arizona has a record hot day at the same time as Alleghany County, North Carolina. Maricopa is the proud owner of 23 separate weather stations, while Alleghany has only 1. So Though, from the population's perspective, each "had a really hot day," Maricopa County will count 23 times the records.</p>
 <p>I’ll have to normalize my data.</p>
+<p><a href="wherkewi.github.io/FinalProject3/index.html">NEXT PAGE</a></p>
 
 
 
