--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 		<h1>The Glorious Github Index of William Herkewitz</h1>
 
 		<h2>Do you feel the glory?</h2>
+		
+		<p><strong>I bet you're looking for:</strong> My final project for this class. You can find that puppy <a href="http://wherkewi.github.io/FinalProject/index.html">here</a>.</p>
+		
 
-		<p><strong>Perhaps you are looking for:</strong> My pitches for the final project? If so, you can find a well placed link <a href="http://wherkewi.github.io/Pitches.html">here</a>. Wasn't that well placed? I'd say so.</p>
+		<p><strong>But perhaps you are looking for:</strong> My pitches for the final project? If so, you can find a well placed link <a href="http://wherkewi.github.io/Pitches.html">here</a>. Wasn't that well placed? I'd say so.</p>
 
 		<p><strong>Though it's also possible, but not probable, that you're looking for:</strong> A GIF of a monkey washing a cat. Really? That's exactly what you want? Then you're in luck, you can find such a w&uuml;ndergif <a href="http://1-ps.googleusercontent.com/x/www.dailydawdle.com/images.dailydawdle.com/monkey-washing-cat.gif.pagespeed.ce.XjmJQ-_gBM.gif">here</a>.</p>
 
