--- a/FinalProject2/index.html
+++ b/FinalProject2/index.html
@@ -123,7 +123,7 @@ clear: both;
 <p>What would a graph of the 11,000 stations look like?</p>
 <br></br>
 <div class="cold-section">
-<h2>Mapping the Weather Stattions</h2>
+<h2>Mapping the Weather Stations</h2>
 <div class='my-legend'>
 <div class='legend-title'>Number of Weather Stations Per County</div>
 <div class='legend-scale'>
